@@ -34,6 +34,7 @@ import org.springframework.social.twitter.api.MessageTooLongException;
 import org.springframework.social.twitter.api.StatusDetails;
 import org.springframework.social.twitter.api.TickerSymbolEntity;
 import org.springframework.social.twitter.api.Tweet;
+import org.springframework.social.twitter.api.TweetData;
 
 
 /**
@@ -320,7 +321,7 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 	}
 
 	@Test
-	public void updateStatus_withImage() {
+	public void updateStatus_withImage_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update_with_media.json"))
 				.andExpect(method(POST))
 				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
@@ -330,9 +331,21 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 		assertSingleTweet(tweet);
 		mockServer.verify();
 	}
-	
+
 	@Test
-	public void updateStatus_withLocation() {
+	public void updateStatus_withImage() {
+		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update_with_media.json"))
+				.andExpect(method(POST))
+				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
+		// TODO: Match body content to ensure fields and photo are included
+		Resource photo = getUploadResource("photo.jpg", "PHOTO DATA");
+		Tweet tweet = twitter.timelineOperations().updateStatus(new TweetData("Test Message").withMedia(photo));
+		assertSingleTweet(tweet);
+		mockServer.verify();
+	}
+
+	@Test
+	public void updateStatus_withLocation_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
 				.andExpect(method(POST))
 				.andExpect(content().string("status=Test+Message&lat=123.1&long=-111.2"))
@@ -346,7 +359,18 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 	}
 
 	@Test
-	public void updateStatus_withLocationAndDisplayCoordinates() {
+	public void updateStatus_withLocation() {
+		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
+				.andExpect(method(POST))
+				.andExpect(content().string("status=Test+Message&lat=123.1&long=-111.2"))
+				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
+		Tweet tweet = twitter.timelineOperations().updateStatus(new TweetData("Test Message").atLocation(123.1f, -111.2f));
+		assertSingleTweet(tweet);
+		mockServer.verify();
+	}
+
+	@Test
+	public void updateStatus_withLocationAndDisplayCoordinates_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
 				.andExpect(method(POST))
 				.andExpect(content().string("status=Test+Message&lat=123.1&long=-111.2&display_coordinates=true"))
@@ -361,7 +385,18 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 	}
 
 	@Test
-	public void updateStatus_withInReplyToStatus() {
+	public void updateStatus_withLocationAndDisplayCoordinates() {
+		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
+				.andExpect(method(POST))
+				.andExpect(content().string("status=Test+Message&lat=123.1&long=-111.2&display_coordinates=true"))
+				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
+		Tweet tweet = twitter.timelineOperations().updateStatus(new TweetData("Test Message").atLocation(123.1f, -111.2f).displayCoordinates(true));
+		assertSingleTweet(tweet);
+		mockServer.verify();
+	}
+
+	@Test
+	public void updateStatus_withInReplyToStatus_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
 				.andExpect(method(POST))
 				.andExpect(content().string("status=Test+Message+in+reply+to+%40someone&in_reply_to_status_id=123456"))
@@ -373,9 +408,22 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 		assertSingleTweet(tweet);
 		mockServer.verify();
 	}
+	
 
 	@Test
-	public void updateStatus_withWrapLinks() {
+	public void updateStatus_withInReplyToStatus() {
+		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
+				.andExpect(method(POST))
+				.andExpect(content().string("status=Test+Message+in+reply+to+%40someone&in_reply_to_status_id=123456"))
+				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
+
+		Tweet tweet = twitter.timelineOperations().updateStatus(new TweetData("Test Message in reply to @someone").inReplyToStatus(123456));
+		assertSingleTweet(tweet);
+		mockServer.verify();
+	}
+
+	@Test
+	public void updateStatus_withWrapLinks_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update.json"))
 				.andExpect(method(POST))
 				.andExpect(content().string("status=Test+Message&wrap_links=true"))
@@ -389,7 +437,7 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 	}
 
 	@Test
-	public void updateStatus_withImageAndLocation() {
+	public void updateStatus_withImageAndLocation_DEPRECATED() {
 		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update_with_media.json"))
 				.andExpect(method(POST))
 				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
@@ -398,6 +446,18 @@ public class TimelineTemplateTest extends AbstractTwitterApiTest {
 		StatusDetails details = new StatusDetails();
 		details.setLocation(123.1f, -111.2f);
 		Tweet tweet = twitter.timelineOperations().updateStatus("Test Message", photo, details);
+		assertSingleTweet(tweet);
+		mockServer.verify();
+	}
+
+	@Test
+	public void updateStatus_withImageAndLocation_() {
+		mockServer.expect(requestTo("https://api.twitter.com/1.1/statuses/update_with_media.json"))
+				.andExpect(method(POST))
+				.andRespond(withSuccess(jsonResource("status"), APPLICATION_JSON));
+		// TODO: Match body content to ensure fields and photo are included
+		Resource photo = getUploadResource("photo.jpg", "PHOTO DATA");
+		Tweet tweet = twitter.timelineOperations().updateStatus(new TweetData("Test Message").atLocation(123.1f, -111.2f).withMedia(photo));
 		assertSingleTweet(tweet);
 		mockServer.verify();
 	}
